created template profile

--- a/Layout/GF/src/app/profile/profile.component.html
+++ b/Layout/GF/src/app/profile/profile.component.html
@@ -1,6 +1,7 @@
 <p></p>
-<div class=" text-center" style="height: 100px">
-  <h1>My First Bootstrap Page</h1>
+<div class="text-center" style="height: 100px">
+  <div  id="nameUser"><b style="font-size: 30px">ИВАНОВ ИВАН ИВАНОВИЧ</b> <span class="titleButton">НЕ УДВЕЖДАНО</span></div>
+
 
 </div>
 <div class="container">
@@ -8,7 +9,7 @@
 
     <div class="col-sm-4">
       <div class="card profilImg d-flex flex-wrap mt-0">
-        <img src="https://www.totallybound.com/image/cache/data/Authors/author_profile_1-300x400.png" alt="Avatar" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKg5zXriU7pKm1Q2jI0RW4Cmmqbwa1JCrFQAkVU1vM0_tSTUWesw" alt="Avatar" style="width:100%">
       </div>
       <div class="col-sm-12 text-center prof d-flex flex-wrap mt-4">
         <b> РЕДАКТИРОВАТЬ ПРОФИЛЬ</b>
@@ -22,39 +23,40 @@
         <div class="card-body">
 
           <div class="row d-flex align-items-center flex-wrap mt-0">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Дата рождения:</b></div>
+            <div class="col-sm-8">20 февраля 1988 года</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Пол: </b></div>
+            <div class="col-sm-8">Mужской</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>E-mail:</b></div>
+            <div class="col-sm-8">krutoiGit@gmail.com</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Номер телефона</b></div>
+            <div class="col-sm-8">8 (538) 284 48 48 </div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Страна</b></div>
+            <div class="col-sm-8">20 февраля 1988 года</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Город:</b></div>
+            <div class="col-sm-8">Mужской</div>
           </div>
 
           <div class="row d-flex flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-4"><b>О себе</b></div>
             <div class="col-sm-8">
-              .col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5
+              С другой стороны новая модель органиаационной деятелностьи представляет совой интересны эксперимент
+              проверки соответсвющий условий активации.Разнообразый и  богатый
             </div>
           </div>
 
@@ -63,7 +65,7 @@
     </div>
 
 
-    <div class="col-sm-12">
+    <div class="d col-sm-12">
     </div>
 
 
@@ -75,108 +77,96 @@
 
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Языки мероприятий:</b></div>
+            <div class="col-sm-8">Русский, английский</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Опыт  проведияения мероприятий:</b></div>
+            <div class="col-sm-8">5 лет</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Образование:</b></div>
+            <div class="col-sm-8">Высшее</div>
           </div>
 
           <div class="row d-flex flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-4"><b> Документи  об образование:</b></div>
             <div class="col-sm-8">
-              .col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5
+              Диплом о высшем образовании,Школний атестат,Сертификат университета
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-12">
+    <div class="d col-sm-12">
     </div>
 
 
     <div class="col-sm-4"></div>
     <div class="col-sm-8">
       <div class="card">
-        <div class="card-header"><b>Образование и  опыт</b></div>
+        <div class="card-header"><b>Поспорт</b></div>
         <div class="card-body">
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-6"><div class="foto col-sm-12">
-              <div> <i class="fotoIc material-icons">camera_alt</i></div>
-              <p class="hint"> Вы можете перетащить фото сюда</p>
-              <p class="hint"> или</p>
-              <div class="uploadFail">Выберите файл</div>
+            <div class="col-sm-6"><div class="col-sm-12">
+                <img  class="foto" src="http://m.ngzt.ru/userfiles/picitem/img-20161122211923-780.jpg" >
             </div></div>
-            <div class="col-sm-6"><div class="foto col-sm-12">
-              <div> <i class="fotoIc material-icons">camera_alt</i></div>
-              <p class="hint"> Вы можете перетащить фото сюда</p>
-              <p class="hint"> или</p>
-              <div class="uploadFail">Выберите файл</div>
-            </div></div>
+            <div class="col-sm-6">
+              <div class=" col-sm-12">
+                <img  class="foto" src="https://cs9.pikabu.ru/post_img/big/2016/09/21/7/1474456259184250295.jpg" >
+            </div>
+            </div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Серия и номер паспорта:</b></div>
+            <div class="col-sm-8">158964237</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Дата выдочи:</b></div>
+            <div class="col-sm-8">5 октября 1976 года</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Город выдочи</b></div>
+            <div class="col-sm-8">Москва</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Кем выдан:</b></div>
+            <div class="col-sm-8">МОРК</div>
           </div>
 
-          <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
-          </div>
 
-          <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
-          </div>
-        </div>
       </div>
     </div>
-    <div class="col-sm-12">
+    <div class="d col-sm-12">
     </div>
 
 
     <div class="col-sm-4"></div>
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-header"><b>Образование и  опыт</b></div>
+    <div class="col-sm-12">
+
+      <div class="card" style="width: 100%">
+        <div class="card-header "><b>Раквизиты и  ИНН: </b></div>
         <div class="card-body">
 
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>Раквизиты:</b></div>
+            <div class="col-sm-8">456784916122</div>
           </div>
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>.col-sm-3</b></div>
-            <div class="col-sm-8">.col-sm-5</div>
+            <div class="col-sm-4"><b>ИНН:</b></div>
+            <div class="col-sm-8">465456456545</div>
           </div>
 
-
+        </div>
         </div>
       </div>
     </div>
