--- a/Layout/GF/src/app/profile/profile.component.css
+++ b/Layout/GF/src/app/profile/profile.component.css
@@ -6,14 +6,15 @@
   margin-top: 10px;
 }
 .profilImg,img {
-  box-shadow: 0 4px 8px 0 grey;
+
   transition: 0.5s;
   width: 100%;
   height:400px;
 }
-.col-sm-12{
+.d{
   height: 20px;
 }
+
 
 .prof{
 
@@ -34,15 +35,15 @@ h1{
   height: 50px;
 }
 .foto {
-  background-color: #8b8b8b;
+
   height: 300px;
-  border-style: dashed;
+
 }
 
 .fotoIc {
   margin-left: 40%;
   font-size: 50px;
-  color: black;
+  color: darkgrey;
 }
 
 .hint {
@@ -57,4 +58,21 @@ h1{
   width: 200px;
   background-color: white;
   border: solid 1px grey;
+}
+#nameUser{
+
+  font-size: 30px;
+  padding-top: 5px;
+  paclosedding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+.titleButton{
+  height: 20px;
+  font-size: 10px;
+  background-color: #7f7f7f;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom:10px;
+  padding-left: 20px;
 }
