--- a/Layout/GF/src/app/profile/profile.component.html
+++ b/Layout/GF/src/app/profile/profile.component.html
@@ -1,22 +1,22 @@
 <p></p>
 <div class="text-center" style="height: 100px">
-  <div  id="nameUser"><b style="font-size: 30px">ИВАНОВ ИВАН ИВАНОВИЧ</b> <span class="titleButton">НЕ УДВЕЖДАНО</span></div>
+  <div  id="nameUser"><b style="font-size: 30px; vertical-align: sub;">ИВАНОВ ИВАН ИВАНОВИЧ</b> <span class="titleButton">НЕ УДВЕЖДАНО</span></div>
 
 
 </div>
 <div class="container">
   <div class="row ">
 
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="card profilImg d-flex flex-wrap mt-0">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKg5zXriU7pKm1Q2jI0RW4Cmmqbwa1JCrFQAkVU1vM0_tSTUWesw" alt="Avatar" style="width:100%">
       </div>
-      <div class="col-sm-12 text-center prof d-flex flex-wrap mt-4">
-        <b> РЕДАКТИРОВАТЬ ПРОФИЛЬ</b>
-      </div>
+      <button class="btn col-sm-12 text-center prof mt-4 text-center bdr-0">
+        РЕДАКТИРОВАТЬ ПРОФИЛЬ
+      </button>
     </div>
 
-    <div class="col-sm-8 d-flex flex-wrap mt-10">
+    <div class="col-md-8 d-flex flex-wrap mt-10">
 
       <div class="card">
         <div class="card-header "><b>Личный информация</b></div>
@@ -69,8 +69,8 @@
     </div>
 
 
-    <div class="col-sm-4"></div>
-    <div class="col-sm-8">
+    <div class="col-md-4"></div>
+    <div class="col-md-8">
       <div class="card">
         <div class="card-header"><b>Образование и  опыт</b></div>
         <div class="card-body">
@@ -104,8 +104,8 @@
     </div>
 
 
-    <div class="col-sm-4"></div>
-    <div class="col-sm-8">
+    <div class="col-md-4"></div>
+    <div class="col-md-8">
       <div class="card">
         <div class="card-header"><b>Поспорт</b></div>
         <div class="card-body">
@@ -148,27 +148,24 @@
     </div>
 
 
-    <div class="col-sm-4"></div>
-    <div class="col-sm-12">
-
-      <div class="card" style="width: 100%">
-        <div class="card-header "><b>Раквизиты и  ИНН: </b></div>
-        <div class="card-body">
+    <div class="col-md-4"></div>
+    <div class="card" style="width: 100%">
+      <div class="card-header "><b>Раквизиты и  ИНН: </b></div>
+      <div class="card-body">
 
 
-          <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>Раквизиты:</b></div>
-            <div class="col-sm-8">456784916122</div>
-          </div>
-
-          <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-4"><b>ИНН:</b></div>
-            <div class="col-sm-8">465456456545</div>
-          </div>
-
+        <div class="row d-flex align-items-center flex-wrap mt-2">
+          <div class="col-sm-4"><b>Раквизиты:</b></div>
+          <div class="col-sm-8">456784916122</div>
         </div>
+
+        <div class="row d-flex align-items-center flex-wrap mt-2">
+          <div class="col-sm-4"><b>ИНН:</b></div>
+          <div class="col-sm-8">465456456545</div>
         </div>
+
       </div>
+    </div>
     </div>
 
   </div>
