--- a/Layout/GF/src/app/account/account.component.html
+++ b/Layout/GF/src/app/account/account.component.html
@@ -4,8 +4,8 @@
 <link href="https://unpkg.com/@angular/material/prebuilt-themes/deeppurple-amber.css" rel="stylesheet">
 <div class="container-fluid">
     <div class="row">
-        <div class="breadcrumbs  hidden-sm-down">
-            <ul>
+        <div class="breadcrumbs  hidden-sm-down mt-2">
+            <ul class="mb-0">
                 <li><a routerLink="/">Главная</a></li>
                 <li><a routerLink="/account">Наташа Ветлицкая</a></li>
                 <li><a routerLink="/account">Управление мероприятиями</a></li>
@@ -20,10 +20,9 @@
                 <h2>{{event.h2}}</h2>
             </div>
         </div>
-
         <div class="row mt-4">
             <div class="col">
-                <owl-carousel class="carousel" [options]="option"
+                <owl-carousel class="carousel owl-acc-car" [options]="option"
                               [items]="slides"
                               [carouselClasses]="['owl-theme', 'row', 'sliding']">
                     <div class="item slide" *ngFor="let slide of event.slide;">
@@ -81,7 +80,7 @@
         </div>
     </div>
 
-    <div class="row text-center">
+    <div class="row text-center mt-5">
         <div class="col-lg-12">
             <button class="btn btn-success btn-blue btn-w" type="button">Добавить мероприятия</button>
         </div>
@@ -89,7 +88,7 @@
     </div>
 
     <div *ngFor="let cal_event of cal_events;">
-        <div class="row mt-5 ">
+        <div class="row mt-3">
             <div class="col mt-lg-5 mt-md-5">
                 <h2>{{cal_event.h2}}</h2>
             </div>
@@ -97,12 +96,12 @@
 
         <div class="row mt-4">
             <div class="col">
-                <owl-carousel class="carousel" [options]="option_cal"
+                <owl-carousel class="carousel cal-carousel" [options]="option_cal"
                               [items]="slides"
                               [carouselClasses]="['owl-theme', 'row', 'sliding']">
-                    <div class="item slide" *ngFor="let slide of cal_event.slide;">
+                    <div class="item slide" *ngFor="let month of calendar;">
 
-                      <ngb-datepicker class="ngcal" [displayMonths]="displayMonths" [navigation]="navigation" [showWeekNumbers]="showWeekNumbers">
+                      <ngb-datepicker class="ngcal"  [(ngModel)]="model" [displayMonths]="displayMonths" [navigation]="navigation" [showWeekNumbers]="showWeekNumbers">
                       </ngb-datepicker>
                     </div>
                 </owl-carousel>
@@ -111,15 +110,15 @@
     </div>
 
     <div *ngFor="let last_event of last_events;">
-        <div class="row mt-5 ">
+        <div class="row mt-2">
             <div class="col mt-lg-5 mt-md-5">
                 <h2>{{last_event.h2}}</h2>
             </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row mt-5">
             <div class="col">
-                <owl-carousel class="carousel" [options]="option"
+                <owl-carousel class="carousel carousel-end" [options]="option"
                               [items]="slides"
                               [carouselClasses]="['owl-theme', 'row', 'sliding']">
                     <div class="item slide" *ngFor="let slide of last_event.slide;">
