--- a/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
+++ b/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
@@ -2,60 +2,68 @@
       rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-faded small-navbar">
-  <div class="container-fluid d-block">
-    <div class="row d-flex justify-content-between flex-wrap align-items-center">
-      <div class="col-12 col-lg-8 p-0-md">
-        <div class="row">
-          <div class="col-lg-3 col-xl-3 p-0-md">
-            <a class="text-lg-center mt-lg-2 mt-md-1" routerLink="/home" >
-              <svg viewBox="0 0 139 42" class="logo p-0 mt-2-md">
-                <path class="st0" d="M0,8V0h8v8H0z M26,8h8V0h-8V8z M26,25c0,5-4,9-9,9s-9-4-9-9V14H0v12h0.1C0.6,34.9,8,42,17,42s16.4-7.1,16.9-16
+    <div class="container-fluid d-block">
+        <div class="row d-flex justify-content-between flex-wrap align-items-center">
+            <div class="col-12 col-lg-8 p-0-md">
+                <div class="row">
+                    <div class="col-lg-3 col-xl-3 p-0-md">
+                        <a class="text-lg-center mt-lg-2 mt-md-1" routerLink="/home">
+                            <svg viewBox="0 0 139 42" class="logo p-0 mt-2-md">
+                                <path class="st0" d="M0,8V0h8v8H0z M26,8h8V0h-8V8z M26,25c0,5-4,9-9,9s-9-4-9-9V14H0v12h0.1C0.6,34.9,8,42,17,42s16.4-7.1,16.9-16
 	    H34V14h-8V25z M100,16c0,8.8-7.2,16-16,16H74v8h-8V0h18C92.8,0,100,7.2,100,16z M92,16c0-4.4-3.6-8-8-8H74v16h10
 	    C88.4,24,92,20.4,92,16z M48,14h-8v26h8v-6c0-6.6,5.4-12,12-12v-8c-4.5,0-8.7,1.5-12,4V14z M125,8h14V0h-14c-11,0-20,9-20,20
 	    s9,20,20,20h14V24h-8v8h-6c-6.6,0-12-5.4-12-12S118.4,8,125,8z"/>
-              </svg>
-            </a>
-            <div class="d-lg-none d-flex justify-content-end float-right">
-              <button class="custom-toggler navbar-toggler navbar-toggler-right ml-2" type="button" data-toggle="collapse"
-                      data-target="#navbarNav" aria-controls="navbarNav" id="menu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <button class="custom-toggler navbar-toggler navbar-toggler-right search-icon d-block d-lg-none ml-2"  id= "searchIcon" type="button" data-toggle="collapse"
-                      data-target="#navbarNavSearch" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
+                            </svg>
+                        </a>
+                        <div class="d-lg-none d-flex justify-content-end float-right">
+                            <button class="custom-toggler navbar-toggler navbar-toggler-right ml-2" type="button"
+                                    data-toggle="collapse"
+                                    data-target="#navbarNav" aria-controls="navbarNav" id="menu" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <button class="custom-toggler navbar-toggler navbar-toggler-right search-icon d-block d-lg-none ml-2"
+                                    id="searchIcon" type="button" data-toggle="collapse"
+                                    data-target="#navbarNavSearch" aria-controls="navbarNav" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-xl-9 p-0-md">
+                        <app-header-search></app-header-search>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-lg-9 col-xl-9 p-0-md">
-            <app-header-search></app-header-search>
-          </div>
-        </div>
-      </div>
 
-      <div class="col-12 col-lg-4">
-        <div class="float-lg-right">
-          <div class="collapse  navbar-toggleable-md navbar-collapse text-md-left justify-content-lg-center order-md-2"  id="navbarNav" >
-            <ul class="navbar-nav d-inline-flex ">
-              <li class="nav-item active ">
-                <a class="nav-link" routerLink="/blog">{{menu.blog}}</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/guide">{{menu.guide}}</a>
-              </li>
-              <li class="nav-item" *ngIf ="!login">
-                <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">{{menu.signin}}</a>
-              </li>
-              <li class="nav-item" *ngIf ="login">
-                <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">fghnmfgh</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)" (click)="openSignUpDialog()">{{menu.signup}}</a>
-              </li>
-            </ul>
-          </div>
+            <div class="col-12 col-lg-4">
+                <div class="float-lg-right">
+                    <div class="collapse  navbar-toggleable-md navbar-collapse text-md-left justify-content-lg-center order-md-2"
+                         id="navbarNav">
+                        <ul class="navbar-nav d-inline-flex ">
+                            <li class="nav-item active ">
+                                <a class="nav-link" routerLink="/blog">{{menu.blog}}</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="/guide">{{menu.guide}}</a>
+                            </li>
+                            <li class="nav-item" *ngIf="!login">
+                                <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">{{menu.signin}}</a>
+                            </li>
+                            <li class="nav-item" *ngIf="!login">
+                                <a class="nav-link" href="javascript:void(0)" (click)="openSignUpDialog()">{{menu.signup}}</a>
+                            </li>
+
+                            <li class="nav-item account" *ngIf="login">
+                                <a routerLink="/account" class="nav-link">
+                                    <img src="../../assets/img/download.png" alt="">
+                                    Наташа Ветлицкая
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </nav>
-
