--- a/Layout/GF/src/app/edit/edit.component.css
+++ b/Layout/GF/src/app/edit/edit.component.css
@@ -38,7 +38,6 @@ label {
 }
 
 
-
 .input-group input[type=text]:focus {
     box-shadow: inset 0px 1px 0px #53bcb2;
     border-top-color: #53bcb2;
@@ -55,7 +54,7 @@ input:focus + label i {
 
 
 .edit-modal .close {
-    margin-top: -74px;
+    margin-top: -60px;
     right: 24%;
     outline: none;
     position: absolute;
@@ -71,9 +70,22 @@ input:focus + label i {
 }
 
 
+
+
+
 @media (max-width: 820px) {
     .edit-modal {
         width: 453px;
+    }
+
+    .edit-modal.close{
+        right: 7%;
+    }
+}
+
+@media (min-width: 820px) {
+    .edit-modal.close{
+        right: 7%;
     }
 }
 @media (max-width: 630px) {
