--- a/Layout/GF/src/app/account/account.component.css
+++ b/Layout/GF/src/app/account/account.component.css
@@ -62,3 +62,30 @@ figure.item.item-event figcaption{
     margin-top: 30px;
 }
 
+
+@media (min-width: 992px){
+    .white {
+        font-size: 15px;
+    }
+
+}
+
+@media screen and (max-width: 770px) {
+    .white {
+        font-size: 15px;
+    }
+    .slide-title{
+        font-size: 15px;
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+    .white {
+        font-size: 15px;
+    }
+    .slide-title{
+        font-size: 15px;
+    }
+
+}
