--- a/Layout/GF/src/app/account/account.component.html
+++ b/Layout/GF/src/app/account/account.component.html
@@ -33,7 +33,7 @@
                             <figcaption>
                                 <div class="container">
                                     <i class="material-icons">mode_edit</i>
-                                    <p >{{ slide.title }}</p>
+                                    <p class="slide-title">{{ slide.title }}</p>
                                     <div class="row bottom">
                                         <button class="col-lg-12 col-md-12 btn btn-outline-primary white" (click)="openListDialog()">Список
                                             проведений
@@ -100,7 +100,7 @@
                 <owl-carousel class="carousel" [options]="option_cal"
                               [items]="slides"
                               [carouselClasses]="['owl-theme', 'row', 'sliding']">
-                    <div class="item slide" *ngFor="let slide of cal_event.slide;">
+                    <div class="item slide text-center" *ngFor="let slide of cal_event.slide;">
 
                         <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next"></ngb-datepicker>
                     </div>
