--- a/Layout/GF/src/app/list/list.component.html
+++ b/Layout/GF/src/app/list/list.component.html
@@ -16,13 +16,13 @@
             <td>Забронировано 25 мест</td>
             <td>
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-3 col-md-4 col-4">
                         <a href="javascript:void(0)">
-                            <i class="material-icons edit">mode_edit</i>
+                            <i class="material-icons edit ">mode_edit</i>
                         </a>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3 col-md-4 col-4">
                         <a href="javascript:void(0)">
                             <i class="material-icons delete">cancel</i>
                         </a>
