--- a/Layout/GF/src/app/account/account.component.css
+++ b/Layout/GF/src/app/account/account.component.css
@@ -68,6 +68,9 @@ figure.item.item-event figcaption{
         font-size: 15px;
     }
 
+    .slide-title{
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 770px) {
