--- a/Layout/GF/src/app/profile/profile.component.html
+++ b/Layout/GF/src/app/profile/profile.component.html
@@ -1,6 +1,16 @@
-<p></p>
-<div class="text-center" style="height: 100px">
-  <div  id="nameUser"><b style="font-size: 30px; vertical-align: sub;">ИВАНОВ ИВАН ИВАНОВИЧ</b> <span class="titleButton">НЕ УДВЕЖДАНО</span></div>
+<div class="container-fluid mt-5">
+  <div class="row">
+    <div class="breadcrumbs  hidden-sm-down">
+      <ul>
+        <li><a routerLink="/">Главная</a></li>
+        <li><a routerLink="/guide">Иванов Иван Иванович</a></li>
+      </ul>
+
+    </div>
+    <div class="col-md-12 mb-5">
+      <h2>Иванов Иван Иванович <span class="titleButton">НЕ УДВЕЖДАНО</span></h2>
+    </div>
+  </div>
 
 
 </div>
