--- a/Layout/GF/src/app/add-event/add-event.component.css
+++ b/Layout/GF/src/app/add-event/add-event.component.css
@@ -315,6 +315,16 @@ i {
   width: 100%;
   height: 350px;
 }
+.h4{
+  font-size: 15px;
+  width: 300px;
+  padding: 15px;
+  margin: auto;
+  color:white;
+  background-color: #3b857e;
+  height: 50px;
+}
+
 @media (max-width: 576px) {
   .toggle-group {
     margin: 0;
