--- a/Layout/GF/src/app/add-event-modal/add-event-modal.component.css
+++ b/Layout/GF/src/app/add-event-modal/add-event-modal.component.css
@@ -36,13 +36,14 @@ label {
 .form-control:focus {
     box-shadow: none;
 }
-
-
+.edit-modal {
+  position: relative;
+}
 .edit-modal .close {
-    margin-top: -60px;
-    right: 25%;
-    outline: none;
-    position: absolute;
+  margin-top: -55px;
+  right: -55px;
+  outline: none;
+  position: absolute;
 }
 .edit-modal .close:before {
     content: '';
@@ -94,18 +95,26 @@ input:focus + label i {
         margin: 0 5px;
     }
 
-    .edit-modal .close {
-        margin-top: -10px;
-        margin-right: -5px;
-    }
-    .edit-modal .close:before{
-        width: 18px;
-        height: 18px;
-    }
+  .edit-modal {
+    position: relative;
+  }
     .p-0-xs {
         padding: 0 !important;
     }
     .text-center-xs {
         text-align: center !important;
     }
+}
+@media (max-width: 767px){
+  .edit-modal .close {
+    margin-top: -30px;
+    right: -30px;
+    outline: none;
+    position: absolute;
+  }
+  .table thead th,
+  .table tbody tr td {
+    padding-right: 5px !important;
+    font-size: 10px !important;
+  }
 }
