--- a/Layout/GF/src/app/edit-profile/edit-profile.component.html
+++ b/Layout/GF/src/app/edit-profile/edit-profile.component.html
@@ -1,11 +1,10 @@
 <div class="jumbotron text-center">
   <h1>РЕДАКТИРОВАТЬ ПРОФИЛЯ</h1>
-
 </div>
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-12 col-md-4">
       <div class="card">
         <img class="card-img-top"
              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQk8b9NKY-JtUtNux0YEiwhdlLtpXDNWiTKhYJwDSjh27etW_jC6A"
@@ -13,12 +12,12 @@
       </div>
       <div class="row">
         <div class=" text-center col-sm-12">
-
           <button class="icon btn btn-link">  <i class="fi material-icons">camera_alt</i><b style="color: #3fb8af">Изменить фото</b></button>
         </div>
       </div>
     </div>
-    <div class="col-sm-8">
+
+    <div class="col-12 col-md-8">
       <div class="card">
 
         <div class="card-header"><b>Личний информация</b></div>
@@ -137,17 +136,8 @@
           </div>
         </div>
       </div>
-    </div>
 
-
-    <div class="col-sm-12"></div>
-
-
-    <div class="col-sm-4">
-
-    </div>
-    <div class="col-sm-8">
-      <div class="card">
+      <div class="card mt-4">
 
         <div class="card-header"><b>Образование и  опыт</b></div>
         <div class="card-body">
@@ -191,27 +181,14 @@
               </div>
             </div>
           </div>
-
-
-
-
-
         </div>
       </div>
-    </div>
-
-    <div class="col-sm-12"></div>
-
-    <div class="col-sm-4">
-
-    </div>
-    <div class="col-sm-8">
-      <div class="card">
+      <div class="card mt-4">
 
         <div class="card-header"><b>Паспорт</b></div>
         <div class="card-body">
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-12 col-md-6 my-3">
               <form id="zdrop1" class="fileuploader center-align col-sm-12">
                 <div class="upload-label text-center" style="width: 200px;">
                   <i class="fotoIc material-icons">camera_alt</i>
@@ -224,7 +201,7 @@
               </form>
 
             </div>
-            <div class="col-sm-6">
+            <div class="col-12 col-md-6 my-3">
               <form id="zdrop2" class="fileuploader center-align col-sm-12">
                 <div class="upload-label text-center " style="width: 200px;margin: auto">
                   <i class="fotoIc material-icons">camera_alt</i>
@@ -297,13 +274,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-12"></div>
-    <div class="col-sm-4">
-
-    </div>
-    <div class="col-sm-8">
-      <div class="card">
+      <div class="card mt-4">
 
         <div class="card-header">Раквизиты и  ИИН: </div>
         <div class="card-body">
@@ -331,18 +302,9 @@
 
         </div>
       </div>
-    </div>
-
-
-    <div class="col-sm-12"></div>
-    <div class="col-sm-4">
-
-    </div>
-    <div class="col-sm-8">
-      <div class="text-center">
+      <div class="text-center mt-4">
         <div class="saveFile" style="background-color: #3fb8af;color: white">СОХРАНИТЬ ПРОФИЛЬ</div>
       </div>
-
     </div>
   </div>
 </div>
