--- a/Layout/GF/src/app/list/list.component.html
+++ b/Layout/GF/src/app/list/list.component.html
@@ -1,6 +1,6 @@
-<div class="edit-modal container">
+<div class="edit-modal container my-2">
     <button class="close" mat-dialog-close [disabled]="false" mat-button></button>
-    <table class="table table-striped" *ngFor="let last_event of last_events;">
+    <table class="table table-striped pr-0" *ngFor="let last_event of last_events;">
         <thead>
         <tr>
             <th>Дата</th>
