--- a/Layout/GF/src/app/add-event-modal/add-event-modal.component.html
+++ b/Layout/GF/src/app/add-event-modal/add-event-modal.component.html
@@ -1,4 +1,4 @@
-<div class="edit-modal container" id="eee">
+<div class="edit-modal container my-2" id="eee">
   <button class="close" mat-dialog-close [disabled]="false" mat-button></button>
   <div class="row text-center">
     <div class="col-lg-12">
@@ -7,44 +7,43 @@
   </div>
 
   <div class="row">
-    <div class="input-group col-lg-12 col-md-12 col-6 mr-4">
+    <div class="input-group col-lg-12 col-md-12 col-12 mr-4">
       <div class="col-lg-12">
         <span class="pull-left pt-3 pb-2"><b>Название мероприятия:</b></span>
       </div>
-
-      <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel1"
-              *ngFor="let event of events;">
-        <option *ngFor="let slide of event.slide;">{{ slide.title }}</option>
-      </select>
-
+      <div class="col-12 select-caret">
+        <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel1"
+                *ngFor="let event of events;">
+          <option *ngFor="let slide of event.slide;">{{ slide.title }}</option>
+        </select>
+      </div>
     </div>
   </div>
 
-  <div class="row mt-3">
-    <div class="input-group col-lg-8 col-md-6 col-6 mr-4">
+  <div class="row mt-3 ml-0">
+    <div class="input-group col-lg-8 col-md-6 col-12 mr-4">
       <div class="col-lg-12">
         <span class="pull-left pb-2"><b>Дата:</b></span>
       </div>
-
       <input type="text" class="form-control" id="inp" placeholder="{{today | date:'dd MMMM yyyy'}}"
              aria-describedby="basic-addon2" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
       <label for="inp"><i class="material-icons">date_range</i></label>
     </div>
 
-    <div class="input-group col-lg-3 col-md-4 col-6">
+    <div class="input-group col-lg-3 col-md-4 col-12">
       <div class="row">
         <div class="col-lg-12">
           <span class="pull-left pb-2"><b>Время:</b></span>
         </div>
 
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 pr-0 select-caret">
           <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel2">
             <option>00</option>
             <option>01</option>
             <option>02</option>
           </select>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 pr-0 select-caret">
           <select class="form-control btn btn-outline-primary gray" id="sel3">
             <option>00</option>
             <option>01</option>
@@ -52,21 +51,6 @@
           </select>
         </div>
       </div>
-
-      <!--  <div ngbDropdown class="d-inline-block mr-2" #filterItem="ngbDropdown">
-            <button class="btn btn-outline-primary green" id="ftr2" ngbDropdownToggle>Тематика</button>
-            <div ngbDropdownMenu aria-labelledby="ftr1" class="w-500">
-                <div class="col-12 mb-2">
-                    <mat-checkbox>Короткая(до 3 часов)</mat-checkbox>
-                </div>
-                <div class="col-12 mb-2">
-                    <mat-checkbox>Средняя(3-10 часов)</mat-checkbox>
-                </div>
-                <div class="col-12 mb-2">
-                    <mat-checkbox>Длинная(более 10 часов)</mat-checkbox>
-                </div>
-            </div>
-        </div>-->
     </div>
   </div>
 
