--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -295,23 +295,21 @@ a:hover {
     color: #ef7c8a;
     text-decoration: underline;
 }
-
-/*a{*/
-/*text-decoration: underline;*/
-/*color:#108e81;*/
-/*}*/
-
-/*a:visited{*/
-/*color:#108e81*/
-/*}*/
-
-/*a:hover  {*/
-/*color:#ef7c8a;*/
-/*}*/
-/*Small devices (landscape phones, 576px and up)*/
-
-/*Medium devices (tablets, 768px and up)*/
-
+.select-caret:before {
+  content: 'keyboard_arrow_down';
+  font-family: "Material Icons";
+  width: 12px;
+  height: 15px;
+  background-color: #ffffff;
+  display: block;
+  position: absolute;
+  right: 21px;
+  top: 9px;
+  z-index: 5;
+}
+.pr-0.select-caret:before{
+  right: 5px;
+}
 @media (max-width: 767px) {
     .mt-sm-0 {
         margin-top: 0px !important;
@@ -335,7 +333,7 @@ a:hover {
     }
 
     .breadcrumbs {
-        margin-top: 30px !important;
+        margin-top: 0px !important;
     }
 
     h1.header-title {
