account page mobile

--- a/Layout/GF/src/app/add-event-modal/add-event-modal.component.html
+++ b/Layout/GF/src/app/add-event-modal/add-event-modal.component.html
@@ -30,7 +30,7 @@
       <label for="inp"><i class="material-icons">date_range</i></label>
     </div>
 
-    <div class="input-group col-lg-3 col-md-4 col-12">
+   <!-- <div class="input-group col-lg-3 col-md-4 col-12">
       <div class="row">
         <div class="col-lg-12">
           <span class="pull-left pb-2"><b>Время:</b></span>
@@ -50,6 +50,30 @@
             <option>02</option>
           </select>
         </div>
+      </div>
+    </div>-->
+
+    <div class="input-group col-lg-3 col-md-4 col-sm-12 col-12">
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="pull-left pb-2"><b>Время:</b></span>
+        </div>
+
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
+          <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel2">
+            <option>00</option>
+            <option>01</option>
+            <option>02</option>
+          </select>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
+          <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel3">
+            <option>00</option>
+            <option>01</option>
+            <option>02</option>
+          </select>
+        </div>
+
       </div>
     </div>
   </div>
