--- a/Layout/GF/src/app/edit/edit.component.css
+++ b/Layout/GF/src/app/edit/edit.component.css
@@ -46,6 +46,14 @@ input:focus + label i {
     color: #53bcb2;
 }
 
+
+label {
+    position: absolute;
+    padding: 25px;
+    margin-top: -58px;
+    margin-left: -10px;
+}
+
 .gray {
     color: #000;
     background-color: transparent;
@@ -71,9 +79,6 @@ input:focus + label i {
     height: 25px;
     display: block
 }
-
-
-
 
 
 @media (max-width: 820px) {
