--- a/Layout/GF/src/app/edit/edit.component.html
+++ b/Layout/GF/src/app/edit/edit.component.html
@@ -11,32 +11,35 @@
             <div class="col-lg-12">
                 <span class="pull-left pb-2"><b>Дата:</b></span>
             </div>
+            <div class="col-lg-12">
+                <input type="text" class="form-control" id="inp" placeholder="{{today | date:'dd MMMM yyyy'}}"
+                       aria-describedby="basic-addon2" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
+                <label for="inp"><i class="material-icons">date_range</i></label>
+            </div>
 
-            <input type="text" class="form-control" id="inp" placeholder="{{today | date:'dd MMMM yyyy'}}"
-                   aria-describedby="basic-addon2" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
-            <label for="inp"><i class="material-icons">date_range</i></label>
         </div>
 
-        <div class="input-group col-lg-3 col-md-4 col-12">
+        <div class="input-group col-lg-3 col-md-4 col-sm-12 col-12">
             <div class="row">
                 <div class="col-lg-12">
                     <span class="pull-left pb-2"><b>Время:</b></span>
                 </div>
 
-                <div class="col-lg-6 col-md-6 select-caret">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
                     <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel2">
                         <option>00</option>
                         <option>01</option>
                         <option>02</option>
                     </select>
                 </div>
-                <div class="col-lg-6 col-md-6 select-caret">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
                     <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel3">
                         <option>00</option>
                         <option>01</option>
                         <option>02</option>
                     </select>
                 </div>
+
             </div>
         </div>
 
