--- a/Layout/GF/src/app/edit/edit.component.css
+++ b/Layout/GF/src/app/edit/edit.component.css
@@ -136,3 +136,9 @@ label {
     font-size: 10px !important;
   }
 }
+
+@media (min-width: 1000px) {
+    .lg-r{
+        margin-right: -32px !important;
+    }
+}
