--- a/Layout/GF/src/app/edit/edit.component.html
+++ b/Layout/GF/src/app/edit/edit.component.html
@@ -1,4 +1,4 @@
-<div class="edit-modal container pr-0 my-2" id="eee">
+<div class="edit-modal container pr-0 my-2">
     <button class="close" mat-dialog-close [disabled]="false" mat-button></button>
     <div class="row text-center">
         <div class="col-lg-12">
@@ -6,8 +6,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="input-group col-lg-8 col-md-6 col-12 mr-4">
+    <div class="row input-group mt-3">
+        <div class=" col-lg-7 col-md-12 col-12 mr-4">
             <div class="col-lg-12">
                 <span class="pull-left pb-2"><b>Дата:</b></span>
             </div>
@@ -19,29 +19,29 @@
 
         </div>
 
-        <div class="input-group col-lg-3 col-md-4 col-sm-12 col-12">
-            <div class="row">
-                <div class="col-lg-12">
-                    <span class="pull-left pb-2"><b>Время:</b></span>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
-                    <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel2">
-                        <option>00</option>
-                        <option>01</option>
-                        <option>02</option>
-                    </select>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
-                    <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel3">
-                        <option>00</option>
-                        <option>01</option>
-                        <option>02</option>
-                    </select>
-                </div>
-
+        <div class=" col-lg-4 col-md-12 col-sm-12 col-12">
+        <div class="row lg-r">
+            <div class="col-lg-12">
+                <span class="pull-left pb-2"><b>Время:</b></span>
             </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
+                <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel2">
+                    <option>00</option>
+                    <option>01</option>
+                    <option>02</option>
+                </select>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-6 select-caret">
+                <select class="form-control btn btn-outline-primary gray col-lg-12 col-md-12" id="sel3">
+                    <option>00</option>
+                    <option>01</option>
+                    <option>02</option>
+                </select>
+            </div>
+
         </div>
+    </div>
 
 
         <div class="col-lg-12 text-center">
